Improve websocket support